@@ -1,5 +1,5 @@
 /*
- * Copyright © 2024-2025 LSDAF
+ * Copyright © 2024-2026 LSDAF
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -13,7 +13,6 @@
  * See the License for the specific language governing permissions and
  * limitations under the License.
  */
-
 package com.lsadf.tools;
 
 import java.io.File;
@@ -21,7 +20,6 @@ import java.io.IOException;
 import java.io.UncheckedIOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.stream.Stream;
 import lombok.extern.slf4j.Slf4j;
 
@@ -51,8 +49,8 @@ public class PackageInfoGenerator {
   private static final String JAVA_EXTENSION = ".java";
 
   public static void main(String[] args) throws IOException {
-    Path srcDir = Paths.get(args[0]);
-    Path destDir = Paths.get(args[1]);
+    Path srcDir = Path.of(args[0]);
+    Path destDir = Path.of(args[1]);
     if (!Files.isDirectory(srcDir)) {
       log.warn("Source directory does not exist: {}", srcDir);
       return;
